--- a/Ingresso/Ingresso/Properties/Resources.resx
+++ b/Ingresso/Ingresso/Properties/Resources.resx
@@ -118,43 +118,88 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="cadeira_branca1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadeira_branca1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="corra" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\corra.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="transformes1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\transformes1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="cadeira_branca" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadeira_branca.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ingresso" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ingresso.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="vingadores" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\vingadores.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="transformes" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\transformes.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="queen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\queen.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="cadeira_verde" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadeira_verde.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ingresso1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ingresso1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadeira_azul" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadeira_azul.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadeira_verde1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadeira_verde1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="vingadores1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vingadores1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ingresso1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ingresso1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadeira_branca2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_branca2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transformes1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transformes1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ingresso" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ingresso.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_branca1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_branca1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadeira_verde_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadeira_verde_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_verde" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_verde.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="corra1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\corra1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_branca" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_branca.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transformes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transformes.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="corra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\corra.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_verde_ok1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_verde_ok1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="queen1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\queen1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ingresso2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ingresso1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="queen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\queen.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_verde1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_verde1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transformes2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transformes2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vingadores" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vingadores.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_azul1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_azul1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_branca3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_branca3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadeira_verde_ok2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadeira_verde_ok2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="corra2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\corra2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ingresso3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ingresso2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="queen2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\queen2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transformes3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transformes3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vingadores2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vingadores2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
